DEV-2049 Fixes header alignment for small screens

--- a/src/login/styles/header.css
+++ b/src/login/styles/header.css
@@ -2,6 +2,14 @@
   padding: 0;
 }
 
+#kc-header {
+  padding: 0;
+
+  @media (max-width: 767px) {
+    padding: 0;
+  }
+}
+
 .login-pf-page .login-pf-page-header {
   margin: 0;
 }
